# audio-transcription-tool

./: .gitignore  README.md  pyproject.toml  transcribe.py
